--- a/src/Rolog/web.config
+++ b/src/Rolog/web.config
@@ -24,7 +24,7 @@
 	</system.web>
 	
 	<connectionStrings>
-    	<add name="RavenDB" connectionString="Url=http://localhost:8080"/>
+    	<add name="RavenDB" connectionString="Url=http://localhost:8080/databases/rolog"/>
   	</connectionStrings>
 	
 	<system.webServer>
